Update colors, logos, and readability fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primary: #CB8C37;
-  --secondary: #000000;
+  --primary: #E42331;
+  --secondary: #201717;
+  --accent: #E9E3D2;
 }
 
 @theme inline {
@@ -12,6 +13,7 @@
   --color-foreground: var(--foreground);
   --color-primary: var(--primary);
   --color-secondary: var(--secondary);
+  --color-accent: var(--accent);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
